--- a/PDFExtractor/PDFExtractor.csproj
+++ b/PDFExtractor/PDFExtractor.csproj
@@ -84,4 +84,12 @@
     <None Remove="C:\Users\davew\.nuget\packages\tesseract\5.2.0\build\\..\x64\leptonica-1.82.0.dll" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="C:\Users\davew\.nuget\packages\tesseract\5.2.0\build\\..\x64\leptonica-1.82.0.dll" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="C:\Users\davew\.nuget\packages\tesseract\5.2.0\build\\..\x64\tesseract50.dll" />
+  </ItemGroup>
+
 </Project>
